<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.DashboardActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:titleTextColor="@android:color/white"
        app:title="Profile" />
    <!--    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="39dp"
        android:background="@color/colorPrimary"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toStartOf="@+id/cardView1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ImageView
            android:id="@+id/image_attendance"
            android:layout_width="50dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/details" />

        <TextView
            android:id="@+id/text_attendance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="24dp"
            android:paddingBottom="5dp"
            android:text="@string/attendance_details"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="31dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ImageView
            android:id="@+id/image_working"
            android:layout_width="50dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/working" />

        <TextView
            android:id="@+id/text_Working"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="24dp"
            android:paddingBottom="5dp"
            android:text="@string/total_working_days"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="39dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toStartOf="@+id/cardView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <ImageView
            android:id="@+id/image_Present"
            android:layout_width="50dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/present" />


        <TextView
            android:id="@+id/text_Present"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="24dp"
            android:paddingBottom="5dp"
            android:text="@string/total_present_days"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="31dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView1">

        <ImageView
            android:id="@+id/image_late"
            android:layout_width="50dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/late" />


        <TextView
            android:id="@+id/text_late"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="24dp"
            android:paddingBottom="5dp"
            android:text="@string/total_late_marks"
            android:textColor="@android:color/black"
            android:textSize="12sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="39dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toStartOf="@+id/cardView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <ImageView
            android:id="@+id/image_half"
            android:layout_width="50dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/half" />

        <TextView
            android:id="@+id/text_half"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="24dp"
            android:paddingBottom="5dp"
            android:text="@string/total_half_days"
            android:textColor="@android:color/black"
            android:textSize="12sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView5"
        app:layout_constraintTop_toTopOf="@+id/cardView5">

        <ImageView
            android:id="@+id/image_absent"
            android:layout_width="50dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/absent" />

        <TextView
            android:id="@+id/text_absent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="24dp"
            android:paddingBottom="5dp"
            android:text="@string/total_absent_days"
            android:textColor="@android:color/black"
            android:textSize="12sp" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>